--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".feat.todo.TodoActivity">
+    tools:context=".features.todo.TodoActivity">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_delete_all_todo"
