--- a/app/src/main/res/layout/activity_edit_todo.xml
+++ b/app/src/main/res/layout/activity_edit_todo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".features.todo.EditTodoActivity">
+    tools:context=".features.todo.activities.EditTodoActivity">
 
 
     <androidx.appcompat.widget.AppCompatTextView
