--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".features.todo.TodoActivity">
+    tools:context=".features.todo.activities.TodoActivity">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_delete_all_todo"
