--- a/app/src/main/res/layout/item_chat_user_query.xml
+++ b/app/src/main/res/layout/item_chat_user_query.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="from user"
         android:textAlignment="textEnd"
+        android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
