--- a/app/src/main/res/layout/item_chat_word_meaning_response.xml
+++ b/app/src/main/res/layout/item_chat_word_meaning_response.xml
@@ -9,8 +9,8 @@
         android:id="@+id/iv_word"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/ic_launcher_foreground"
         android:background="@drawable/ic_launcher_background"
+        android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,6 +19,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Meaning"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_word" />
