--- a/app/src/main/res/layout/item_chat_user_query.xml
+++ b/app/src/main/res/layout/item_chat_user_query.xml
@@ -12,6 +12,8 @@
         android:text="from user"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
